// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform attributes Should transform boolean prop 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\", {
  focused: true
});"
`;

exports[`transform attributes Should transform cssx var 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\", {
  \\"css:$var\\": true
});"
`;

exports[`transform attributes Should transform different props variations 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\" + \\"Key\\", {
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
});"
`;

exports[`transform attributes Should transform different props with ref 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\" + \\"Key\\", {
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
}, myRef);"
`;

exports[`transform attributes Should transform different props with ref onMount onUnmount 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\" + \\"Key\\", {
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
}, myRef, onMount, onUnmount);"
`;

exports[`transform attributes Should transform key prop 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\" + \\"Key\\");"
`;

exports[`transform attributes Should transform namespaced name 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\", {
  \\"css:blue\\": true
});"
`;

exports[`transform attributes Should transform props spread 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\", { ...props
});"
`;

exports[`transform attributes Should transform props with expressions 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\", {
  prop1: 1 + 1
});"
`;

exports[`transform attributes Should transform simple props 1`] = `
"import { jsx as _jsx } from \\"@whatsup/jsx\\";

_jsx(\\"div\\", \\"UniqueId_\\", {
  prop1: \\"value1\\"
});"
`;
